add microservice & controller, hook everything up

--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
   },
   "author": "Hy Loc",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "6.8.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "3.3.6",
     "jquery": "2.2.3",
+    "lowdb": "^1.0.0",
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
-    "redux-thunk": "2.0.1",
-    "toastr": "2.1.2"
+    "redux-thunk": "2.0.1"
   },
   "devDependencies": {
     "babel-cli": "6.8.0",
