--- a/package.json
+++ b/package.json
@@ -7,14 +7,8 @@
     "start:src": "babel-node tools/srcServer.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter spec tools/testSetup.js src/**/*.test.js src/components/**/*.test.js",
-    "test:watch": "npm run test -- --watch",
-    "clean-dist": "npm run remove-dist && mkdir dist",
-    "remove-dist": "node_modules/.bin/rimraf ./dist",
-    "build:html": "babel-node tools/buildHtml.js",
-    "prebuild": "npm-run-all clean-dist test lint build:html",
-    "build": "babel-node tools/build.js",
-    "postbuild": "babel-node tools/distServer.js"
+    "test": "mocha  --reporter spec tools/testSetup.js tests/**/*.test.js",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "Hy Loc",
   "dependencies": {
@@ -22,6 +16,8 @@
     "babel-polyfill": "6.8.0",
     "body-parser": "^1.18.3",
     "bootstrap": "3.3.6",
+    "chai": "^4.2.0",
+    "enzyme-adapter-react-15.4": "^1.3.0",
     "jquery": "2.2.3",
     "lowdb": "^1.0.0",
     "react": "15.0.2",
@@ -30,7 +26,8 @@
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
-    "redux-thunk": "2.0.1"
+    "redux-thunk": "2.0.1",
+    "sinon": "^7.2.7"
   },
   "devDependencies": {
     "babel-cli": "6.8.0",
@@ -44,7 +41,7 @@
     "colors": "1.1.2",
     "cross-env": "1.0.7",
     "css-loader": "0.23.1",
-    "enzyme": "2.2.0",
+    "enzyme": "^2.2.0",
     "eslint": "2.9.0",
     "eslint-plugin-import": "1.6.1",
     "eslint-plugin-react": "5.0.1",
